--- a/src/Game/CardBundle/Resources/views/Default/index.html.twig
+++ b/src/Game/CardBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,9 @@
-Hello {{ name }}!
+{% extends "::base.html.twig" %}
+
+{% block title %}
+    {{ parent() }}
+{% endblock %}
+
+{% block body %}
+    Hello {{ name }}!
+{% endblock %}
