Intagration de Bootstrap, création des vues, Début des travaux sur le DefaultController et GameRepository

--- a/src/Game/CardBundle/Resources/views/Default/index.html.twig
+++ b/src/Game/CardBundle/Resources/views/Default/index.html.twig
@@ -5,5 +5,11 @@
 {% endblock %}
 
 {% block body %}
-    Hello {{ name }}!
+    Hello <br />
+    {% for l in lastGame  %}
+        {{  l[1] }}<br />
+        {{  l.scoreA }}<br />
+        {{  l.scoreB }}<br />
+
+    {% endfor %}
 {% endblock %}
