--- a/src/Game/CardBundle/Resources/views/Default/index.html.twig
+++ b/src/Game/CardBundle/Resources/views/Default/index.html.twig
@@ -5,11 +5,39 @@
 {% endblock %}
 
 {% block body %}
-    Hello <br />
-    {% for l in lastGame  %}
-        {{  l[1] }}<br />
-        {{  l.scoreA }}<br />
-        {{  l.scoreB }}<br />
 
+    <div class="page-header">
+        <h1>Les Statistiques de Coinche !!</h1>
+    </div>
+
+    {% set winnerTeam = '' %}
+    {% set looserTeam = '' %}
+    {% set winnerscore = '' %}
+    {% set looserscore = '' %}
+    {% set date = '' %}
+    {% set numPartie = '' %}
+
+    {% for g in lastGame  %}
+        {% if g.scoreA >  g.scoreB  %}
+            {% set winnerTeam = g.teamA.player1.firstname ~ ' / ' ~ g.teamA.player2.firstname %}
+            {% set winnerscore = g.scoreA %}
+            {% set looserTeam = g.teamB.player1.firstname ~ ' / ' ~ g.teamB.player2.firstname %}
+            {% set looserscore = g.scoreB %}
+        {% else %}
+            {% set looserTeam = g.teamA.player1.firstname ~ ' / ' ~ g.teamA.player2.firstname %}
+            {% set looserscore = g.scoreA %}
+            {% set winnerTeam = g.teamB.player1.firstname ~ ' / ' ~ g.teamB.player2.firstname %}
+            {% set winnerscore = g.scoreB %}
+        {% endif %}
+        {% set date = g.date|date("m/d/Y") %}
+        {% set numPartie = g.id %}
     {% endfor %}
+
+    <h1>La dernière partie</h1>
+    <p>La dernière partie a vu la brillante victoire de l'équipe <strong>{{ winnerTeam }}</strong> au détriment de la faible équipe <b>{{ looserTeam }}</b> qui n'a pu totalisé que {{ looserscore }} points.<br />
+                {{ date }}
+    </p>
+
+    <hr />
+
 {% endblock %}
