--- a/src/Game/CardBundle/Resources/views/Game/index.html.twig
+++ b/src/Game/CardBundle/Resources/views/Game/index.html.twig
@@ -1,13 +1,12 @@
-{% extends "GameCardBundle:Game:layout.html.twig" %}
+{% extends "GameCardBundle::layout.html.twig" %}
 
 {% block title %}
     Les parties - {{ parent() }}
 {% endblock %}
 
 {% block game_body %}
-
     <div class="page-header">
-        <h1>Les Statistiques de Coinche !!</h1>
+        <h1>Les parties</h1>
     </div>
 
     {% set winnerTeam = '' %}
