--- a/src/Game/CardBundle/Resources/views/Team/index.html.twig
+++ b/src/Game/CardBundle/Resources/views/Team/index.html.twig
@@ -1,10 +1,16 @@
-{% extends "GameCardBundle:Team:layout.html.twig" %}
+{% extends "GameCardBundle::layout.html.twig" %}
 
 {% block title %}
     Les équipes - {{ parent() }}
 {% endblock %}
 
-{% block team_body %}
+{% block game_body %}
+
+    <div class="page-header">
+        <h1>Les équipes</h1>
+    </div>
+    <p>Les meilleures, les pires, celles qui jouent le plus, etc.</p>
+    <hr />
 
     <p>
      {% for t in team  %}
