--- a/src/Game/CardBundle/Resources/views/Player/index.html.twig
+++ b/src/Game/CardBundle/Resources/views/Player/index.html.twig
@@ -6,15 +6,16 @@
 
 {% block game_body %}
 
-    <div class="page-header">
-        <h1>Les joueurs</h1>
-    </div>
-    {{ render(controller("GameCardBundle:Player:menu")) }}
+    {% block game_body_title %}
+        <div class="page-header">
+            <h1>Les joueurs</h1>
+        </div>
+    {% endblock %}
     <hr />
     <p>Les historiques, les statitisques, les points, etc.</p>
 
     <p>
-    {% for p in player  %}
+    {% for p in players  %}
         {{  p.firstname }}<br />
         {{  p.lastname }}<br />
         {{  p.birth|date("d-m-Y") }}<br />
