--- a/src/Game/CardBundle/Resources/views/Player/show.html.twig
+++ b/src/Game/CardBundle/Resources/views/Player/show.html.twig
@@ -5,14 +5,17 @@
 {% endblock %}
 
 {% block game_body %}
-    <div class="page-header">
-        <h1>
-            {% for p in player  %}
-                {{  p.firstname }}
-            {% endfor %}
-        </h1>
-    </div>
-    {{ render(controller("GameCardBundle:Player:menu")) }}
+
+    {% block game_body_title %}
+        <div class="page-header">
+            <h1>
+                {% for p in player  %}
+                    {{  p.firstname }}
+                {% endfor %}
+            </h1>
+        </div>
+    {% endblock %}
+
     <p>à faire : </p>
     <ul>
         <li>nb de victoires</li>
