--- a/src/Game/CardBundle/Resources/views/Player/show.html.twig
+++ b/src/Game/CardBundle/Resources/views/Player/show.html.twig
@@ -4,17 +4,19 @@
     Les équipes - {{ parent() }}
 {% endblock %}
 
-{% block game_body %}
+{% block game_body_title %}
+    <div class="page-header">
+        <h1>
+            {% for p in player  %}
+                {{  p.firstname }}
+            {% endfor %}
+        </h1>
+    </div>
+{% endblock %}
 
-    {% block game_body_title %}
-        <div class="page-header">
-            <h1>
-                {% for p in player  %}
-                    {{  p.firstname }}
-                {% endfor %}
-            </h1>
-        </div>
-    {% endblock %}
+{% block game_body %}
+    {{ render(controller("GameCardBundle:Player:menu")) }}
+
 
     <p>à faire : </p>
     <ul>
