--- a/src/Game/CardBundle/Resources/views/Team/index.html.twig
+++ b/src/Game/CardBundle/Resources/views/Team/index.html.twig
@@ -4,11 +4,11 @@
     Les équipes - {{ parent() }}
 {% endblock %}
 
-
 {% block game_body_title %}
     <div class="page-header">
         <h1>Les équipes</h1>
     </div>
+    {{ render(controller("GameCardBundle:Team:menu")) }}
 {% endblock %}
 
 {% block game_body %}
