dernière modif de vue avant de travailler sur win

--- a/src/Game/CardBundle/Resources/views/Game/index.html.twig
+++ b/src/Game/CardBundle/Resources/views/Game/index.html.twig
@@ -1,10 +1,10 @@
-{% extends "GameCardBundle::layout.html.twig" %}
+{% extends "::base.html.twig" %}
 
 {% block title %}
     Les parties - {{ parent() }}
 {% endblock %}
 
-{% block game_body %}
+{% block body %}
     <div class="page-header">
         <h1>Les parties</h1>
     </div>
