--- a/src/Game/CardBundle/Resources/views/layout.html.twig
+++ b/src/Game/CardBundle/Resources/views/layout.html.twig
@@ -7,16 +7,15 @@
 {% block body %}
 
     {% block game_body_title %}
+
     {% endblock %}
 
-
-    {% if teams is defined and teams is not null and teams|length>0 %}
-        {{ render(controller("GameCardBundle:Team:menu")) }}
-    {% endif %}
     {% if players is defined and players is not null and players|length>0 %}
         {{ render(controller("GameCardBundle:Player:menu")) }}
+    {% else %}
+        {{ render(controller("GameCardBundle:Team:menu")) }}
     {% endif %}
-    {% block game_body %}
 
-    {% endblock %}
+    {% block game_body %}{% endblock %}
+
 {% endblock %}
