--- a/src/Game/CardBundle/Resources/views/Team/index.html.twig
+++ b/src/Game/CardBundle/Resources/views/Team/index.html.twig
@@ -12,7 +12,5 @@
 {% endblock %}
 
 {% block game_body %}
-
-    <p>Les meilleures, les pires, celles qui jouent le plus, etc.</p>
-
+    <h2>Les meilleures, les pires, celles qui jouent le plus, etc.</h2>
 {% endblock %}
