--- a/src/Game/CardBundle/Resources/views/Player/menu.html.twig
+++ b/src/Game/CardBundle/Resources/views/Player/menu.html.twig
@@ -1,6 +1,5 @@
-
-{% for p in players  %}
-    <a href="{{ path('game_card_player_show', {'id': p.id}) }}" type="button" class="btn btn-default">{{  p.firstname }}</a>
-{% endfor %}
-
-<hr />
+<ul>
+    {% for p in players  %}
+        <li><a href="{{ path('game_card_player_show', {'id': p.id}) }}" type="button" class="btn btn-default">{{ p.firstname }}</a></li>
+    {% endfor %}
+</ul>
